Added error codes and schema to openapi generator
